--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
       </section>
-      <!-- <section class="features">
+      <section class="features">
         <div class="container">
           <h2 class="features-title">Product was Built Specifically for You</h2>
           <ul class="features-list">
@@ -130,7 +130,7 @@
           </ul>
           <button class="features-btn" type="button">SIGN UP NOW</button>
         </div>
-      </section> -->
+      </section>
       <section class="management"></section>
     </main>
   </body>
