--- a/index.html
+++ b/index.html
@@ -131,7 +131,34 @@
           <button class="features-btn" type="button">SIGN UP NOW</button>
         </div>
       </section>
-      <section class="management"></section>
+      <section class="advantages">
+        <div class="container">
+          <div class="advantages-thumb">
+            <svg class="management-img" width="349" height="306">
+              <use href="./images/icons.svg#management"></use>
+            </svg>
+            <div class="advantgates-text-field">
+              <h3 class="advantgates-first-title">Effortless Validation for</h3>
+              <h2 class="advantgates-headline">Management</h2>
+              <p class="advantgates-text">
+                The Myspace page defines the individual, his or her
+                characteristics, traits, personal choices and the overall
+                personality of the person.
+              </p>
+              <h3 class="advantgates-title">Accessory makers</h3>
+              <p class="advantgates-text">
+                While most people enjoy casino gambling, sports betting, lottery
+                and bingo playing for the fun.
+              </p>
+              <h3 class="advantgates-title">Alterationists</h3>
+              <p class="advantgates-text">
+                If you are looking for a new way to promote your business that
+                won’t cost you more money.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
